--- a/index.html
+++ b/index.html
@@ -35,26 +35,27 @@
             background-attachment: fixed;
         }
         .landing-box h1{
-            font-size: 70px;
+            font-size: 40px;
             padding: 20px;
             color: #f4f6fc;
         }
         .landing-box p{
             color: #f4f6fc;
-            font-size: 22px;
-            padding: 20px;
+            font-size: 17px;
+            padding: 5px;
+            width: 500px;
+            text-align: center;
         }
         .landing-box button{
-            height: 70px;
+            height: 50px;
             max-height: 70px;
-            margin: 50px;
-            margin-top: 70px;
+            margin-top: 30px;
             border: 4px solid  #182941;
             max-width: 600px;
-            width: 70%;
+            width: 250px;
             color:  #f4f6fc;
             background-color:#000706;
-            font-size: 30px;
+            font-size: 25px;
             border-radius: 50px;
     }
     .landing-box button:hover{
@@ -64,16 +65,16 @@
         .landing-box{
             animation: surgir 1s ease-in-out forwards;
             margin-top: 90px;
-            opacity:1;
-            border: 4px solid rgb(0, 0, 0);
             border-radius: 19px;
-            background-color: #00132d;
             margin-right:auto;
-            font-size:10px;
-            height: 490px;
-            width: 700px;
+            font-weight: 300;
+            font-family: 'Kagitigan';
+            height: auto;
+            width: 500px;
             text-align: center;
-            margin-left: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
     
     }
     
