--- a/quemsomos.html
+++ b/quemsomos.html
@@ -18,7 +18,7 @@
 
         /* Estiliza a parte de rolagem da barra */
         ::-webkit-scrollbar-thumb {
-            background: blue; /* Cor da parte rolável */
+            background-color:#00132d; /* Cor da parte rolável */
         }
 
         /* Estiliza a parte de rolagem ao passar o mouse */
@@ -30,19 +30,8 @@
 </head>
 <body>
     <header>
-        <span class="ini">
         <img id="logo" src="images/logo.png" alt="">
             <a href="#" id="title">EHSYNC</a>
-        </span>
-            <span class="button-container">
-                <a href="conteudos.html"><button class="header-button"><img src="images/content.png" width="60px" height="60px">Conteúdos</button></a>
-                <a href="professor.html"><button class="header-button"><img src="images/teacher.png" width="60px" height="60px" >Professor</button></a>
-                <a href="quemsomos.html"><button class="header-button"><img src="images/quemsomos.png" width="70px" height="70px" >Quem Somos</button></a>
-                    <span class="user">
-                <a href="user.php"><button><img src="images/user.png" width="70px" height="80px" >
-                    User</button></a>
-                </span>
-            </span>
             <div class="menu-hamburger">
                 <span></span>
                 <span></span>
